add a few more tests, up to 100% coverage on entity folder